--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.37",
+    "@ai-sdk/deepseek": "^2.0.8",
     "@ai-sdk/google": "^2.0.23",
-    "@ai-sdk/groq": "^3.0.10",
-    "@ai-sdk/openai": "^2.0.53",
+    "@ai-sdk/groq": "^3.0.12",
+    "@ai-sdk/openai": "^3.0.14",
+    "@ai-sdk/perplexity": "^3.0.8",
     "@ai-sdk/xai": "^3.0.26",
     "@hookform/resolvers": "^5.2.2",
     "@inngest/realtime": "^0.4.5",
@@ -56,7 +58,7 @@
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
     "@xyflow/react": "^12.9.2",
-    "ai": "^5.0.77",
+    "ai": "^6.0.45",
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
