--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
+    "@vercel/analytics": "^1.6.1",
     "@xyflow/react": "^12.9.2",
     "ai": "^6.0.45",
     "better-auth": "^1.3.28",
