--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "superjson": "^2.2.5",
     "tailwind-merge": "^3.3.1",
     "toposort": "^2.0.2",
+    "twitter-api-v2": "^1.29.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
   },
