--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/fiber": "^10.0.0-alpha.2",
     "@sentry/nextjs": "^10.22.0",
     "@tanstack/react-query": "^5.90.5",
     "@trpc/client": "^11.6.0",
@@ -75,6 +76,7 @@
     "jotai": "^2.15.1",
     "ky": "^1.14.0",
     "lucide-react": "^0.546.0",
+    "motion": "^12.29.0",
     "next": "15.5.9",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.2",
@@ -90,6 +92,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.5",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.182.0",
     "toposort": "^2.0.2",
     "twitter-api-v2": "^1.29.0",
     "vaul": "^1.1.2",
@@ -101,6 +104,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.182.0",
     "@types/toposort": "^2.0.7",
     "mprocs": "^0.7.3",
     "prisma": "^6.17.1",
